added a strong as child of p tag
Make the p tag text strong to make it more eye catchy

--- a/recipes/bicol-express.html
+++ b/recipes/bicol-express.html
@@ -10,7 +10,11 @@
 	<img src="../images/image3.png" alt="Bicol Express Image">
 	<h2>Description</h2>
 	<p>Bicol Express is sure to rock your tastebuds! It's rich, creamy, spicy, and delicious, with pork cubes cooked in coconut milk and chili peppers. Serve it with steamed rice for a hearty, big-flavored meal!</p>
-	<p>Ingredients</p>
+	<p>
+		<strong>
+			Ingredients
+		</strong>
+	</p>
 	<ul>
 		<li>Finger Chilies</li>
 		<li>Onion</li>
@@ -25,7 +29,11 @@
 		<li>Fresh Shrimp Paste</li>
 		<li>Water</li>
 	</ul>
-	<p>Steps</p>
+	<p>
+		<strong>
+			Steps
+		</strong>
+	</p>
 	<ol>
 		<li>Brown pork. Saute aromatics in oil in a wide pan over medium heat until softened. Add pork and cook until lightly browned. Add shrimp paste and cook for a few minutes.</li>
 		<li>Add coconut milk and water. Coconut milk tends to curdle or separate when brought to a boil or heated too quickly. Cook in a gentle simmer to ensure a smooth, creamy sauce.</li>
