--- a/recipes/adobo.html
+++ b/recipes/adobo.html
@@ -10,7 +10,11 @@
 	<img src="../images/image.png" alt="Adobo Image">
 	<h2>Description</h2>
 	<p>Chicken Adobo is an authentic Filipino dish and is one of the mostly recognized Filipino foods. Not to be mistaken with Mexican adobo, this dish is uniquely prepared by stewing chicken in vinegar and soy sauce.</p>
-	<p>Ingredients</p>
+	<p>
+		<strong>
+			Ingredients
+		</strong>
+	</p>
 	<ul>
 		<li>2 tablespoons vegetable oil</li>
 		<li>1 (3 pound) chicken, cut into pieces</li>
@@ -22,7 +26,11 @@
 		<li>2 teaspoons black pepper</li>
 		<li>1 bay leaf</li>
 	</ul>
-	<p>Steps</p>
+	<p>
+		<strong>
+			Steps
+		</strong>
+	</p>
 	<ol>
 		<li>Heat vegetable oil in a large skillet over medium-high heat. Cook chicken pieces until golden brown, 2 to 3 minutes per side. Transfer chicken to a plate and set aside.</li>
 		<li>Add onion and garlic to the skillet; cook until softened and brown, about 3 to 5 minutes.</li>
