--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -10,7 +10,9 @@
 	<img src="../images/image2.png" alt="Sinigang na Baboy image">
 	<h2>Description</h2>
 	<p>Sinigang is a Filipino soup cooked with pork. Serve with rice and for additional sauce, use soy or fish sauce. If you want to, you can add what Filipinos call gabi gabi, which is a small taro root. When peeled they look like potatoes. You can add five to six of them when you add the water and make sure they are cooked through. Take them out when they are cooked because they can get too soft.</p>
-	<p>Ingredients</p>
+	<p>
+		<strong>Ingredients</strong>
+	</p>
 	<ul>
 		<li>1 tablespoon vegetable oil</li>
 		<li>1 small onion, chopped</li>
@@ -22,7 +24,11 @@
 		<li>1 (1.41 ounce) package tamarind soup base (such as Knorr®)</li>
 		<li>½ pound fresh green beans, trimmed</li>
 	</ul>
-	<p>Steps</p>
+	<p>
+		<strong>
+			Steps
+		</strong>
+	</p>
 	<ol>
 		<li>Heat vegetable oil in a skillet over medium heat. Add onion; cook and stir until softened and translucent, about 5 minutes. Season with salt.</li>
 		<li>Stir in ginger, tomatoes, and pork chops. Cover and reduce heat to medium-low. Turn the pork occasionally, until browned.</li>
